--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   http: ^0.13.5
   dartz: ^0.10.1
   lottie: ^2.3.2
+  shared_preferences: ^0.5.5
+  
 
 dev_dependencies:
   flutter_test:
